JIRA:INS-369 | smoke test setup for heroku vs crunchy staging

--- a/config/crunchy_env.conf
+++ b/config/crunchy_env.conf
@@ -1,10 +1,11 @@
 TARGET_HOST=crunchy
-PGHOST=p.3b77nodwrvgqfo5vlihh3qibne.db.postgresbridge.com
-PGUSER=application
+PGHOST=p.x5rmxwwzlfgh3obwosxl2ucuvq.db.postgresbridge.com
+PGUSER=perf-test
 PGPORT=5432
 PGDATABASE=postgres
 PGPASS=
-CLIENTS=10
+CLIENTS=1
 DURATION=60
 LOG_DIR=/var/log/my_crons/smoke_test
-APP_DIR=/Users/nishitsoni/Documents/code/pgbench-insights
+APP_DIR=/Users/nishitsoni/Documents/code/perf-metrics
+SQL_WEIGHTS_FILE=sql_weights_staging.csv
