--- a/config/heroku_env.conf
+++ b/config/heroku_env.conf
@@ -1,10 +1,11 @@
 TARGET_HOST=heroku
-PGHOST=ec2-18-232-40-202.compute-1.amazonaws.com
-PGUSER=u1o5pqcru6qqsc
+PGHOST=ec2-52-71-197-122.compute-1.amazonaws.com
+PGUSER=perf-test
 PGPORT=5432
-PGDATABASE=d2k7hftgjkeasg
+PGDATABASE=dfdgc8m25qko36
 PGPASS=
 CLIENTS=10
 DURATION=60
 LOG_DIR=/var/log/my_crons/smoke_test
-APP_DIR=/Users/nishitsoni/Documents/code/pgbench-insights
+APP_DIR=/Users/nishitsoni/Documents/code/perf-metrics
+SQL_WEIGHTS_FILE=sql_weights_staging.csv
